--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ h1{
 button:hover{
     opacity: 0.8;
 }
+
+#result{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
